force-app/main/default/objects/Integration_Usage_Limit__mdt/Integration_Usage_Limit__mdt.object-meta.xml
<CustomObject>
    <description>Per-product integer usage limits for QuickBridge reporting.</description>
    <label>Integration Usage Limit</label>
    <pluralLabel>Integration Usage Limits</pluralLabel>
</CustomObject>