force-app/main/default/objects/Integration_Usage_Limit__mdt/fields/Active_Schedule_Limit__c.field-meta.xml
<CustomField>
    <fullName>Active_Schedule_Limit__c</fullName>
    <label>Active Schedule Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>