force-app/main/default/objects/Integration_Usage_Limit__mdt/fields/Endpoint_Usage_Limit__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_Usage_Limit__c</fullName>
    <label>Endpoint Usage Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>