force-app/main/default/objects/Integration_Usage_Limit__mdt/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QuickBooks</fullName>
            </value>
            <value>
                <fullName>Shopify</fullName>
            </value>
            <value>
                <fullName>Stripe</fullName>
            </value>
            <value>
                <fullName>Authorize.Net</fullName>
            </value>
            <value>
                <fullName>PayPal</fullName>
            </value>
            <value>
                <fullName>FedEx</fullName>
            </value>
            <value>
                <fullName>UPS</fullName>
            </value>
            <value>
                <fullName>DHL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>