force-app/main/default/objects/Integration_Usage_Limit__mdt/fields/Record_Sync_Limit__c.field-meta.xml
<CustomField>
    <fullName>Record_Sync_Limit__c</fullName>
    <label>Record Sync Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>