force-app/main/default/objects/Integration_Usage_Limit__mdt/fields/Task_Usage_Limit__c.field-meta.xml
<CustomField>
    <fullName>Task_Usage_Limit__c</fullName>
    <label>Task Usage Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>